rmk-macro/tests/compile_fail/event_generic.rs
use rmk_macro::event;

#[event]
#[derive(Clone, Copy, Debug)]
pub struct GenericEvent<T> {
    pub value: T,
}

fn main() {}
